# py-project-analyzer

./: .cursorrules  .gitignore  LICENCE  Makefile  README.md  pyproject.toml
prototype/: business_architecture.md  global_class_diagram.md  private_filtered_smoke.json  program_driver.md  project_data_schema.json  prototype_script.py  self_graph.json  self_graph.md  self_graph.puml  service_modules_design.md  subgraph_smoke.json
src/: main.py
src/py_project_analyzer/: __init__.py  cli.py
src/py_project_analyzer/adapters/: __init__.py  filesystem_candidate_path_provider.py
src/py_project_analyzer/services/: __init__.py  code_analysis_service.py  dependency_link_service.py  graph_filter_service.py  output_render_service.py  project_scan_service.py
tests/: code_analysis_service.test.py  dependency_link_service.test.py  filesystem_candidate_path_provider.test.py  graph_filter_service.test.py  output_render_service.test.py  project_scan_service.test.py
