[project]
name = "py-project-analyzer"
version = "0.1.0"
description = "Reverse Engineering tool for open source python projects."
authors = [
    {name = "RC-diamond-GH"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
