[project]
name = "py-project-analyzer"
version = "0.1.0"
description = "Reverse Engineering tool for open source python projects."
authors = [
    {name = "RC-diamond-GH"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
]

[project.scripts]
py-project-analyzer = "py_project_analyzer.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9.0.0"
]

[tool.pytest.ini_options]
python_files = "*.test.py"
pythonpath = ["src"]
addopts = "--import-mode=importlib"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
